@@ -1,21 +1,26 @@
 # Copyright (c) 2018 Patricio Cubillos and contributors.
 # puppies is open-source software under the MIT license (see LICENSE).
 
+from .mandeltr  import *
+from .mandelecl import *
 from .linramp   import *
 from .quadramp  import *
 from .expramp   import *
-from .mandelecl import *
-from .mandeltr  import *
 from .bliss     import *
 
+from .mandeltr  import __all__ as mtall
+from .mandelecl import __all__ as meall
 from .linramp   import __all__ as lrall
 from .quadramp  import __all__ as qrall
 from .expramp   import __all__ as erall
-from .mandelecl import __all__ as meall
-from .mandeltr  import __all__ as mtall
 from .bliss     import __all__ as biall
 
-__all__ = lrall + qrall + erall + meall + mtall + biall
+# Astrophysical:
+__all__ = (meall + mtall
+# Ramps:
+           + lrall + qrall + erall
+# Pixel maps:
+           + biall)
 
 
 # Clean up top-level namespace--delete everything that isn't in __all__
